# tt-ai-assignment

./: .env.example  .gitignore  .pre-commit-config.yaml  NOTES.md  README.md  corpus.jsonl  ingest.py  langgraph.json  pyproject.toml  requirements.txt  start.sh
docs/: architecture.drawio
eval/: run_eval.py
src/agent/: configuration.py  constants.py  graph.py  models.py  nodes.py  prompts.py  state.py
src/api/: schema.py  server.py
src/db/: ingest.py  vector_store.py
tests/: test_core.py
